# Nmap Changelog ($Id$); -*-text-*-
o Added support for log type bitmasks in log_vwrite(). Also replaced a fatal()
  statement by an assert(0) to get rid of a possible infinite call loop when
  passed an invalid log type. [Henri Doreau]

o Added handling for the unexpected error WSAENETRESET (10052). This error is
  currently wrapped in the ifdef for WIN32 as there error appears to be unique
  to windows [Sean Rivera]

o [NSE] Added http-sitemap-generator script which spiders a web server
  and displays its directory structure along with number and types
  of files in each folder. [Piotr Olma]

o [NSE] Added a brute script for new Metasploit RPC interface as 
  metasploit-msgrpc-brute. [Aleksandar Nikolic]

o [NSE] Added the script firewall-bypass which detects a vulnerability in
  netfilter and other firewalls that use helpers to dynamically open ports for
  protocols such as ftp and sip.  [Hani Benhabiles]

o Removed the log_errors variable. (Treating it as true everywhere). This
  change did not effect the support for older scripts that still call it.
  However nmap --log-errors now does nothing. Also updated the documentation to
  reflect this change[Sean Rivera]

o Reduced the size of Port structures by about two thirds (from 176 to
  64 bytes on x86_64). They had accidentally been made bigger than
  they should during the IPv6 code merge. [David Fifield]

o [NSE] Added default values for Expires, Call-ID, Allow and Content-Length
  headers in SIP requests and removed redundant code in sip library.
  [Hani Benhabiles]

o [NSE] Calling methods of unconnected sockets now causes the usual
  error code return value, instead of raising a Lua error. The problem
  was noticed by Daniel Miller. [David Fifield]

o [NSE] Added AUTH_UNIX support to the rpc library and nfs scripts.
  [Daniel Miller]

o [Zenmap] Fixed a crash in the profile editor that would happen when
  the nmap binary couldn't be found. [David Fifield]
